--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 ---
 layout: default
 nav: home
-comment: true
+comment: false
 ---
 {% include about.html %}
 {% include blog.html %}
 {% include projects.html %}
-<!-- 이쪽이 Home Comment-->
